# miRAGe

./: .env.example  .gitignore  AGENTS.md  EXPERIMENTS.md  README.md  compose.override.yaml  compose.yaml  justfile  pyproject.toml
config/: datasets.toml  defaults.toml  methods.toml  models.toml
configs/: baseline.toml  system.toml
configs/prototypes/inference/: simple-rag.toml
configs/prototypes/load/: semantic-default.toml  token-default.toml
configs/prototypes/store/: qdrant-default.toml
configs/registries/: data.toml  methods.toml  models.toml  stores.toml
data/corpus/: documents.jsonl
data/eval/: dev.jsonl
datasets/fiqa/: README.md  source.json
datasets/qasper/: README.md  source.json
datasets/scifact/: README.md  source.json
datasets/smoke/: documents.jsonl
experiments/01-rag-foundation/: README.md  group.toml
reports/: SCHEMA.md
src/mirage/: __init__.py  adapters.py  artifacts.py  chunking.py  cli.py  config.py  datasets.py  embeddings.py  evaluate.py  faiss_store.py  ingest.py  io_utils.py  llm_chunking.py  metrics.py  pipeline.py  preprocessing.py  registry.py  reporting.py  reranking.py  retrieval.py  runner.py  schemas.py
studies/rag-foundation/: README.md  study.toml
tests/: test_artifacts.py  test_chunking.py  test_datasets.py  test_embeddings.py  test_experiment_resolution.py  test_faiss_runtime.py  test_faiss_store.py  test_metrics.py  test_preprocessing.py  test_preprocessing_ingest.py  test_prompt_variants.py  test_reporting.py  test_retrieval_only_eval.py  test_retrieval_stack.py  test_tool_policies.py
(+55 files in other folders)
